--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="abc_double_zero">00</string>
     <string name="abc_single_zero">0</string>
+    <string name="abc_change_teams_name">Change team\'s name</string>
+    <string name="abc_ok_caps">OK</string>
+    <string name="abc_cancel_caps">CANCEL</string>
 </resources>
