--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="abc_change_teams_name">Change team\'s name</string>
     <string name="abc_ok_caps">OK</string>
     <string name="abc_cancel_caps">CANCEL</string>
+    <string name="abc_action_reset">Reset</string>
+    <string name="abc_action_help">Help</string>
+    <string name="abc_action_about">About</string>
 </resources>
