--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">VolleyPoints</string>
+    <string name="app_name">Volley Points</string>
     <string name="action_settings">Settings</string>
     <string name="abc_double_zero">00</string>
     <string name="abc_single_zero">0</string>
     <string name="abc_change_teams_name">Change team\'s name</string>
     <string name="abc_ok_caps">OK</string>
     <string name="abc_cancel_caps">Cancel</string>
-    <string name="abc_action_reset">Reset All Scores</string>
+    <string name="abc_action_reset">Reset All</string>
     <string name="abc_action_reset_timeouts">Reset TimeOuts</string>
     <string name="abc_action_help">Help</string>
     <string name="abc_action_about">About</string>
