--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,17 @@
 <resources>
-    <string name="app_name">Volley Points</string>
+    <string name="app_name">VolleyPoints</string>
     <string name="action_settings">Settings</string>
     <string name="abc_double_zero">00</string>
     <string name="abc_single_zero">0</string>
     <string name="abc_change_teams_name">Change team\'s name</string>
     <string name="abc_ok_caps">OK</string>
-    <string name="abc_cancel_caps">Cancel</string>
+    <string name="abc_yes">Yes</string>
+    <string name="abc_no">No</string>
+    <string name="abc_cancel">Cancel</string>
     <string name="abc_action_reset">Reset All</string>
     <string name="abc_action_reset_timeouts">Reset TimeOuts</string>
     <string name="abc_action_help">Help</string>
     <string name="abc_action_about">About</string>
+    <string name="abc_closing_activity">Do you want to close VolleyPoints?\nNote: If you close VolleyPoints, all current game information will be lost.</string>
+    <string name="abc_closing_activity_title">Closing VolleyPoints</string>
 </resources>
