--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">VolleyPoints</string>
     <string name="action_settings">Settings</string>
-    <string name="abc_double_zero">00</string>
-    <string name="abc_single_zero">0</string>
+    <string name="abc_double_zero" translatable="false">00</string>
+    <string name="abc_single_zero" translatable="false">0</string>
     <string name="abc_change_teams_name">Change team\'s name</string>
     <string name="abc_ok_caps">OK</string>
     <string name="abc_yes">Yes</string>
@@ -17,4 +17,5 @@
     <string name="abc_time_out_caps">TIME OUT</string>
     <string name="abc_home_caps">HOME</string>
     <string name="abc_visit_caps">VISIT</string>
+    <string name="abc_time_out_reset_toast">Time outs reset</string>
 </resources>
